fixed margin of post create form on small screen

--- a/react-app/src/components/PostCreateForm/postCreateForm.css
+++ b/react-app/src/components/PostCreateForm/postCreateForm.css
@@ -78,7 +78,7 @@
         grid-template-columns: 500px;
         width: 500px;
         padding: 3px;
-        margin: auto;
+        /* margin: auto; */
         box-shadow: 0px 0px 6px 3px rgb(96, 178, 189), -4px 6px 7px 2px rgba(77, 77, 77, 0.671);
         border-radius: 8px;
     }
